adding changes for grants exercise

--- a/excercise-grants/index.html
+++ b/excercise-grants/index.html
@@ -20,7 +20,7 @@
       </p>
     <![endif]-->
     <header class="flex-container">
-      <h1>Grant's Dog Walking!</h1>
+      <h1 class="grants">Grant's Dog Walking!</h1>
       <nav class="flex-item">
         <a class="flex-item" href="home">Home</a>
         <a class="flex-item" href="prices">Prices</a>
